# stanchion

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: flow_bench.rs
doc/: background.md  katex-header.html  theory.md
examples/: airport_security.json
src/: config.rs  error.rs  kani_proofs.rs  lib.rs  main.rs
src/dynamic/: mod.rs  time_expanded.rs
src/flow/: dinic.rs  mod.rs  push_relabel.rs  scaling.rs
src/flow/min_cost/: cycle_canceling.rs  mod.rs  network_simplex.rs  successive_shortest.rs
src/graph/: edge.rs  mod.rs  node.rs  residual.rs
src/opt/: decision.rs  min_cut.rs  mod.rs
src/queue/: jackson.rs  mod.rs
src/routing/: mod.rs
src/scheduling/: mod.rs
src/sim/: arrivals.rs  event.rs  mod.rs  service.rs
tests/integration/: flow_algorithms.rs  main.rs  routing.rs  sim_convergence.rs
