[package]
name = "stanchion"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror     = "2"
ordered-float = "4"
rand          = "0.9"
rustc-hash    = "2"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"

[dev-dependencies]
approx    = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }

# kani is installed as a cargo sub-command (cargo kani), not a dep
# verus is a separate binary, not a cargo dep

[[bench]]
name    = "flow_bench"
harness = false

[profile.release]
lto           = "thin"
codegen-units = 1

[lints.rust]
# kani is injected by cargo-kani, not a Cargo feature
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
